--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "check-conflict-prettier-eslint": "npx eslint-config-prettier src/App.tsx --print-config",
     "check-types": "tsc --noemit"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "D": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
@@ -48,9 +54,11 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
     "husky": "^9.0.11",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "prisma": "^5.14.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
