--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
-    }
+    },
+    "sourceMap": true
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
