hot-fix: bug on error handler

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,9 @@
     // override prettier
     "prettier/prettier": [
       "error",
-      {},
+      {
+        "endOfLine": "auto"
+      },
       {
         "usePrettierrc": true
       }
