--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "firebase": "^10.12.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
@@ -71,5 +72,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^6.0.4"
   }
 }
