--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development npx nodemon",
-    "build": "rimraf ./dist && tsc && tsc-alias && npx prisma generate",
+    "build": "rimraf ./dist && npx prisma generate && tsc && tsc-alias",
     "lint": "yarn run eslint:check && yarn run prettier:check && yarn run check-types",
     "start:dev": "cross-env NODE_ENV=development node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
