--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/dateformat": "^5.0.2",
+    "@types/qs": "^6.9.15",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "D": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "firebase": "^10.12.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "qs": "^6.12.1"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
